--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
+json-impl/src/test/resources/site/.idea
+.DS_Store
 target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
-release.properties
-dependency-reduced-pom.xml
-buildNumber.properties
+.project
+.settings/
+.classpath
+bin/
+*node_modules/
