--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,19 @@
 		<url>https://github.com/cytoscape/cytoscpae-app.git</url>
 	</scm>
 
+	<distributionManagement>
+		<repository>
+			<id>releases</id>
+			<name>Internal Releases</name>
+			<url>http://code.cytoscape.org/nexus/content/repositories/releases</url>
+		</repository>
+		<snapshotRepository>
+			<id>snapshots</id>
+			<name>Internal Snapshots</name>
+			<url>http://code.cytoscape.org/nexus/content/repositories/snapshots</url>
+		</snapshotRepository>
+	</distributionManagement>
+
 	<modules>
 		<module>biopax</module>
 		<module>command-dialog</module>
