--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>org.cytoscape</groupId>
 	<artifactId>app-parent</artifactId>
-	<version>3.3.0</version>
+	<version>3.4.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>Parent Project POM for Core Apps</name>
 
